samples/_failures_safe/1761644709_e9c2ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57670fa4.c: In function ‘main’:
./samples/SAFE/__tmp_57670fa4.c:148:5: error: expected declaration or statement at end of input
  148 |     printf("\n");
      |     ^~~~~~
